salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/OrgIQ_Dimension_Score__c.object-meta.xml
<CustomObject>
    <description>Per-dimension score for a scan, with rule coverage so partial assessments are visible.</description>
    <label>OrgIQ Dimension Score</label>
    <pluralLabel>OrgIQ Dimension Scores</pluralLabel>
    <nameField>
        <displayFormat>DIM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>