salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <description>Whether this dimension was fully assessed, partially assessed, or not assessed at all.</description>
    <inlineHelpText>Whether this dimension was fully assessed, partially assessed, or not assessed at all.</inlineHelpText>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Partially Assessed</fullName>
            </value>
            <value>
                <fullName>Not Assessed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>