salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <description>Which readiness dimension this score covers.</description>
    <inlineHelpText>Which readiness dimension this score covers.</inlineHelpText>
    <label>Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D1 Grounding Quality</fullName>
            </value>
            <value>
                <fullName>D2 Data Foundation</fullName>
            </value>
            <value>
                <fullName>D3 Action Surface</fullName>
            </value>
            <value>
                <fullName>D4 Permission Blast Radius</fullName>
            </value>
            <value>
                <fullName>D5 Automation Collision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>