salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/In_Composite__c.field-meta.xml
<CustomField>
    <fullName>In_Composite__c</fullName>
    <description>False when coverage fell below threshold and the dimension was excluded from the composite.</description>
    <inlineHelpText>False when coverage fell below threshold and the dimension was excluded from the composite.</inlineHelpText>
    <label>Included In Composite</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>