salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Missing_Signals__c.field-meta.xml
<CustomField>
    <fullName>Missing_Signals__c</fullName>
    <description>Signals that were unavailable, causing rules to be skipped.</description>
    <inlineHelpText>Signals that were unavailable, causing rules to be skipped.</inlineHelpText>
    <label>Missing Signals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>