salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Rule_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Rule_Coverage__c</fullName>
    <description>Proportion of this dimension's rules that could run given available signals.</description>
    <inlineHelpText>Proportion of this dimension's rules that could run given available signals.</inlineHelpText>
    <label>Rule Coverage</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>