salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <description>The scan this dimension score belongs to.</description>
    <inlineHelpText>The scan this dimension score belongs to.</inlineHelpText>
    <label>Scan</label>
    <referenceTo>OrgIQ_Scan__c</referenceTo>
    <relationshipLabel>Dimension Scores</relationshipLabel>
    <relationshipName>Dimension_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>