salesforce/force-app/main/default/objects/OrgIQ_Dimension_Score__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Dimension score 0-100. Only meaningful when rule coverage is high.</description>
    <inlineHelpText>Dimension score 0-100. Only meaningful when rule coverage is high.</inlineHelpText>
    <label>Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>